[package]
name = "testangel-sap"
version = "0.7.0"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for interaction with SAP systems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib" ]

[dependencies]
lazy_static = "1.4.0"
sap-scripting = "0.3.3"
testangel-engine = { git = "https://github.com/lilopkins/testangel.git" }
