[package]
name = "testangel-sap"
version = "0.14.0-rc.2"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for interaction with SAP systems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib" ]

[dependencies]
base64 = "0.22.0"
dynamic-plugin = { version = "0.6.0", features = ["client"] }
sap-scripting = "0.3"
testangel-engine = { version = "1.0.0", git = "https://github.com/lilopkins/testangel.git", branch = "next" }
